@@ -12,13 +12,7 @@ import sqlancer.presto.PrestoGlobalState;
 import sqlancer.presto.PrestoSchema.PrestoCompositeDataType;
 import sqlancer.presto.PrestoSchema.PrestoDataType;
 import sqlancer.presto.PrestoToStringVisitor;
-import sqlancer.presto.ast.PrestoCastFunction;
-import sqlancer.presto.ast.PrestoExpression;
-import sqlancer.presto.ast.PrestoSelect;
-import sqlancer.presto.ast.PrestoAggregateFunctionOld;
-import sqlancer.presto.gen.PrestoUntypedExpressionGenerator.PrestoBinaryArithmeticOperator;
-import sqlancer.presto.gen.PrestoUntypedExpressionGenerator.PrestoUnaryPostfixOperator;
-import sqlancer.presto.gen.PrestoUntypedExpressionGenerator.PrestoUnaryPrefixOperator;
+import sqlancer.presto.ast.*;
 
 import java.sql.SQLException;
 import java.util.ArrayList;
@@ -26,9 +20,10 @@ import java.util.Arrays;
 import java.util.List;
 
 public class PrestoQueryPartitioningAggregateTester extends PrestoQueryPartitioningBase
-    implements TestOracle<PrestoGlobalState> {
+        implements TestOracle<PrestoGlobalState> {
 
     private String firstResult;
+    private String firstResultType;
     private String secondResult;
     private String originalQuery;
     private String metamorphicQuery;
@@ -36,16 +31,17 @@ public class PrestoQueryPartitioningAggregateTester extends PrestoQueryPartition
     public PrestoQueryPartitioningAggregateTester(PrestoGlobalState state) {
         super(state);
         PrestoErrors.addGroupByErrors(errors);
+        PrestoErrors.addExpressionErrors(errors);
     }
 
     @Override
     public void check() throws SQLException {
         super.check();
-        PrestoAggregateFunctionOld aggregateFunction = Randomly.fromOptions(PrestoAggregateFunctionOld.MAX,
-            PrestoAggregateFunctionOld.MIN, PrestoAggregateFunctionOld.SUM, PrestoAggregateFunctionOld.COUNT,
-            PrestoAggregateFunctionOld.AVG/* , PrestoAggregateFunction.STDDEV_POP */);
-        NewFunctionNode<PrestoExpression, PrestoAggregateFunctionOld> aggregate = gen
-            .generateArgsForAggregate(aggregateFunction);
+        PrestoAggregateFunction aggregateFunction = Randomly.fromOptions(PrestoAggregateFunction.MAX,
+                PrestoAggregateFunction.MIN, PrestoAggregateFunction.SUM, PrestoAggregateFunction.COUNT,
+                PrestoAggregateFunction.AVG/* , PrestoAggregateFunction.STDDEV_POP */);
+        List<Node<PrestoExpression>> aggregateArgs = gen.generateArgsForAggregate(aggregateFunction);
+        NewFunctionNode<PrestoExpression, PrestoAggregateFunction> aggregate = new NewFunctionNode<PrestoExpression, PrestoAggregateFunction>(aggregateArgs, aggregateFunction);
         List<Node<PrestoExpression>> fetchColumns = new ArrayList<>();
         fetchColumns.add(aggregate);
         while (Randomly.getBooleanWithRatherLowProbability()) {
@@ -57,14 +53,18 @@ public class PrestoQueryPartitioningAggregateTester extends PrestoQueryPartition
         }
         originalQuery = PrestoToStringVisitor.asString(select);
         firstResult = getAggregateResult(originalQuery);
+        firstResultType = getAggregateResultType(originalQuery);
         metamorphicQuery = createMetamorphicUnionQuery(select, aggregate, select.getFromList());
         secondResult = getAggregateResult(metamorphicQuery);
 
         state.getState().getLocalState().log(
-            "--" + originalQuery + ";\n--" + metamorphicQuery + "\n-- " + firstResult + "\n-- " + secondResult);
+                "--" + originalQuery + ";\n--" + metamorphicQuery + "\n-- " + firstResult + "\n-- " + secondResult);
+        if (firstResultType.equals("VARBINARY") || firstResultType.equals("ARRAY(VARBINARY)")  || firstResultType.equals("ARRAY(ARRAY(VARBINARY))") )
+            throw new IgnoreMeException();
         if (firstResult == null && secondResult != null
-            || firstResult != null && (!firstResult.contentEquals(secondResult)
-            && !ComparatorHelper.isEqualDouble(firstResult, secondResult))) {
+                || firstResult != null &&
+                (!firstResult.contentEquals(secondResult) && !ComparatorHelper.isEqualDouble(firstResult, secondResult))
+        ) {
             if (secondResult.contains("Inf")) {
                 throw new IgnoreMeException(); // FIXME: average computation
             }
@@ -74,21 +74,21 @@ public class PrestoQueryPartitioningAggregateTester extends PrestoQueryPartition
     }
 
     private String createMetamorphicUnionQuery(PrestoSelect select,
-                                               NewFunctionNode<PrestoExpression, PrestoAggregateFunctionOld> aggregate, List<Node<PrestoExpression>> from) {
+                                               NewFunctionNode<PrestoExpression, PrestoAggregateFunction> aggregate, List<Node<PrestoExpression>> from) {
         String metamorphicQuery;
-        Node<PrestoExpression> whereClause = gen.generateExpression(PrestoCompositeDataType.getRandomWithoutNull());
+        Node<PrestoExpression> whereClause = gen.generatePredicate();
         Node<PrestoExpression> negatedClause = new NewUnaryPrefixOperatorNode<>(whereClause,
-            PrestoUnaryPrefixOperator.NOT);
+                PrestoUnaryPrefixOperation.PrestoUnaryPrefixOperator.NOT);
         Node<PrestoExpression> notNullClause = new NewUnaryPostfixOperatorNode<>(whereClause,
-            PrestoUnaryPostfixOperator.IS_NULL);
+                PrestoUnaryPostfixOperation.PrestoUnaryPostfixOperator.IS_NULL);
         List<Node<PrestoExpression>> mappedAggregate = mapped(aggregate);
         PrestoSelect leftSelect = getSelect(mappedAggregate, from, whereClause, select.getJoinList());
         PrestoSelect middleSelect = getSelect(mappedAggregate, from, negatedClause, select.getJoinList());
         PrestoSelect rightSelect = getSelect(mappedAggregate, from, notNullClause, select.getJoinList());
         metamorphicQuery = "SELECT " + getOuterAggregateFunction(aggregate) + " FROM (";
         metamorphicQuery += PrestoToStringVisitor.asString(leftSelect) + " UNION ALL "
-            + PrestoToStringVisitor.asString(middleSelect) + " UNION ALL "
-            + PrestoToStringVisitor.asString(rightSelect);
+                + PrestoToStringVisitor.asString(middleSelect) + " UNION ALL "
+                + PrestoToStringVisitor.asString(rightSelect);
         metamorphicQuery += ") as asdf";
         return metamorphicQuery;
     }
@@ -107,6 +107,10 @@ public class PrestoQueryPartitioningAggregateTester extends PrestoQueryPartition
             }
             return resultString;
         } catch (SQLException e) {
+         if(errors.errorIsExpected(e.getMessage())){
+             throw new IgnoreMeException();
+         }
+
             if (!e.getMessage().contains("Not implemented type")) {
                 throw new AssertionError(queryString, e);
             } else {
@@ -115,7 +119,29 @@ public class PrestoQueryPartitioningAggregateTester extends PrestoQueryPartition
         }
     }
 
-    private List<Node<PrestoExpression>> mapped(NewFunctionNode<PrestoExpression, PrestoAggregateFunctionOld> aggregate) {
+    private String getAggregateResultType(String queryString) throws SQLException {
+        String resultString;
+        SQLQueryAdapter q = new SQLQueryAdapter(queryString, errors);
+        try (SQLancerResultSet result = q.executeAndGet(state)) {
+            if (result == null) {
+                throw new IgnoreMeException();
+            }
+            if (!result.next()) {
+                resultString = null;
+            } else {
+                resultString = result.getType(1);
+            }
+            return resultString;
+        } catch (SQLException e) {
+            if (!e.getMessage().contains("Not implemented type")) {
+                throw new AssertionError(queryString, e);
+            } else {
+                throw new IgnoreMeException();
+            }
+        }
+    }
+
+    private List<Node<PrestoExpression>> mapped(NewFunctionNode<PrestoExpression, PrestoAggregateFunction> aggregate) {
         PrestoCastFunction count;
         switch (aggregate.getFunc()) {
             case COUNT:
@@ -124,23 +150,23 @@ public class PrestoQueryPartitioningAggregateTester extends PrestoQueryPartition
             case SUM:
                 return aliasArgs(List.of(aggregate));
             case AVG:
-                NewFunctionNode<PrestoExpression, PrestoAggregateFunctionOld> sum = new NewFunctionNode<>(aggregate.getArgs(),
-                    PrestoAggregateFunctionOld.SUM);
-                count = new PrestoCastFunction(new NewFunctionNode<>(aggregate.getArgs(), PrestoAggregateFunctionOld.COUNT),
-                    new PrestoCompositeDataType(PrestoDataType.FLOAT, 8, 0));
+                NewFunctionNode<PrestoExpression, PrestoAggregateFunction> sum = new NewFunctionNode<>(aggregate.getArgs(),
+                        PrestoAggregateFunction.SUM);
+                count = new PrestoCastFunction(new NewFunctionNode<>(aggregate.getArgs(), PrestoAggregateFunction.COUNT),
+                        new PrestoCompositeDataType(PrestoDataType.FLOAT, 8, 0));
                 return aliasArgs(Arrays.asList(sum, count));
-            case STDDEV_POP:
-                NewFunctionNode<PrestoExpression, PrestoAggregateFunctionOld> sumSquared = new NewFunctionNode<>(
-                    List.of(new NewBinaryOperatorNode<>(aggregate.getArgs().get(0), aggregate.getArgs().get(0),
-                        PrestoBinaryArithmeticOperator.MULT)),
-                    PrestoAggregateFunctionOld.SUM);
-                count = new PrestoCastFunction(
-                    new NewFunctionNode<PrestoExpression, PrestoAggregateFunctionOld>(aggregate.getArgs(),
-                        PrestoAggregateFunctionOld.COUNT),
-                    new PrestoCompositeDataType(PrestoDataType.FLOAT, 8, 0));
-                NewFunctionNode<PrestoExpression, PrestoAggregateFunctionOld> avg = new NewFunctionNode<>(aggregate.getArgs(),
-                    PrestoAggregateFunctionOld.AVG);
-                return aliasArgs(Arrays.asList(sumSquared, count, avg));
+//            case STDDEV_POP:
+//                NewFunctionNode<PrestoExpression, PrestoAggregateFunction> sumSquared = new NewFunctionNode<>(
+//                    List.of(new NewBinaryOperatorNode<>(aggregate.getArgs().get(0), aggregate.getArgs().get(0),
+//                        PrestoBinaryArithmeticOperator.MULT)),
+//                    PrestoAggregateFunction.SUM);
+//                count = new PrestoCastFunction(
+//                    new NewFunctionNode<PrestoExpression, PrestoAggregateFunction>(aggregate.getArgs(),
+//                        PrestoAggregateFunction.COUNT),
+//                    new PrestoCompositeDataType(PrestoDataType.FLOAT, 8, 0));
+//                NewFunctionNode<PrestoExpression, PrestoAggregateFunction> avg = new NewFunctionNode<>(aggregate.getArgs(),
+//                    PrestoAggregateFunction.AVG);
+//                return aliasArgs(Arrays.asList(sumSquared, count, avg));
             default:
                 throw new AssertionError(aggregate.getFunc());
         }
@@ -150,19 +176,20 @@ public class PrestoQueryPartitioningAggregateTester extends PrestoQueryPartition
         List<Node<PrestoExpression>> args = new ArrayList<>();
         int i = 0;
         for (Node<PrestoExpression> expr : originalAggregateArgs) {
-            args.add(new NewAliasNode<PrestoExpression>(expr, "agg" + i++));
+            args.add(new NewAliasNode<>(expr, "agg" + i++));
         }
         return args;
     }
 
-    private String getOuterAggregateFunction(NewFunctionNode<PrestoExpression, PrestoAggregateFunctionOld> aggregate) {
+    private String getOuterAggregateFunction(NewFunctionNode<PrestoExpression, PrestoAggregateFunction> aggregate) {
         switch (aggregate.getFunc()) {
-            case STDDEV_POP:
-                return "sqrt(SUM(agg0)/SUM(agg1)-SUM(agg2)*SUM(agg2))";
+//            case STDDEV_POP:
+//                return "sqrt(SUM(agg0)/SUM(agg1)-SUM(agg2)*SUM(agg2))";
             case AVG:
-                return "SUM(agg0::FLOAT)/SUM(agg1)::FLOAT";
+//                return "SUM(agg0::FLOAT)/SUM(agg1)::FLOAT";
+                return "SUM(CAST(agg0 AS DOUBLE))/CAST(SUM(agg1) AS DOUBLE)";
             case COUNT:
-                return PrestoAggregateFunctionOld.SUM + "(agg0)";
+                return PrestoAggregateFunction.SUM + "(agg0)";
             default:
                 return aggregate.getFunc().toString() + "(agg0)";
         }
